--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -83,7 +83,7 @@
                 </ul>
                 <ul class="form-style-1">
                     <li>
-                        <label class="label-big" id="lblPrice">ราคาขาย</label>&nbsp;<label class="label-small" id="lblCost">ราคาทุน</label>
+                        <label class="label-small-20" id="lblPrice">ราคาขาย</label>&nbsp;<label class="label-small-20" id="lblCost">ราคาทุน</label>
                         <input type="text" id = "txtPrice" name="field1" class="text-size120 text-right" placeholder="0.00" disabled />&nbsp;<input type="text" id = "txtCost" name="field2" class="text-size120 text-right" placeholder="0.00" disabled />
                     </li>
                     <li>
