--- a/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
@@ -31,6 +31,7 @@
                 <th class="gvPrice Rowpointer">ราคาขาย</th>
                 <th class="gvCost Rowpointer">ราคาทุน</th>
                 <th class="gvProfit Rowpointer">กำไร</th>
+                <th class="gvProfit Rowpointer">กำไร (%)</th>
                 <th></th>
             </tr>
         </thead>
