--- a/Alpha/AlphaMvc/Views/ExpiredTechnician1/ExpiredTechnician1.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpiredTechnician1/ExpiredTechnician1.cshtml
@@ -13,7 +13,7 @@
                 <th>ประเภทพนักงาน</th>
                 <th class="hideANDseek">เลขที่บัตร</th>
                 <th>วันหมดอายุ</th>
-                <th class="hideANDseek">ประเภทบัตร</th>
+                <th class="hidecolumn">ประเภทบัตร</th>
                 <th>บริษัท</th>
                 @*<th></th>*@
             </tr>
