--- a/Alpha/AlphaMvc/Views/Products/IndexProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/IndexProducts.cshtml
@@ -24,7 +24,7 @@
                 <th class="Rowpointer">No.</th>
                 <th class="hidecolumn">ID</th>
                 <th class="Rowpointer">วันที่รับเข้า</th>
-                <th class="Rowpointer">Code</th>
+                <th class="Rowpointer">Serial</th>
                 <th class="hideANDseek Rowpointer">หมายเลขเครื่อง</th>
                 @*<th class="hideANDseek Rowpointer">ประเภทสินค้า</th>*@
                 <th class="hideANDseek Rowpointer">รายละเอียด</th>
