--- a/Alpha/AlphaMvc/Views/Requisition/IndexRequisition.cshtml
+++ b/Alpha/AlphaMvc/Views/Requisition/IndexRequisition.cshtml
@@ -20,10 +20,11 @@
                 <th class="Rowpointer">Job No.</th>
                 <th class="Rowpointer">วันที่</th>
                 <th class="Rowpointer">ลูกค้า</th>
-                <th class="Rowpointer">เบอร์โทร</th>
-                <th class="hideANDseek Rowpointer">บุคคลติดต่อ</th>
-                <th class="hideANDseek Rowpointer">ผู้ประสานงาน</th>
-                <th class="hideANDseek Rowpointer">หมายเหตุ</th>
+                <th class="Rowpointer">สถานะ</th>
+                <th class="hidecolumn Rowpointer">เบอร์โทร</th>
+                <th class="hidecolumn Rowpointer">บุคคลติดต่อ</th>
+                <th class="hidecolumn Rowpointer">ผู้ประสานงาน</th>
+                <th class="hidecolumn Rowpointer">หมายเหตุ</th>
                 <th></th>
             </tr>
         </thead>
