--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -3,9 +3,9 @@
     ViewBag.Title = "CreateJobOrder";
 }
 
-<h2>
+@*<h2>
     JobOrder Create
-</h2>
+</h2>*@
 <script src="@Url.Content("~/Scripts/CUDS/JobOrder/CreateJobOrder.js")" type="text/javascript"></script>
 @* =============== timepicker *@
 @*<link href="@Url.Content("~/Content/timepicker/wickedpicker.css")" rel="stylesheet" type="text/css" />*@
@@ -191,7 +191,7 @@
                                     <ul class="resp-tabs-list hor_1">
                                         <li>Income / Expense</li>
                                         <li>ManPower</li>
-                                        <li>Borrow</li>
+                                        <li class="hidecolumn">Borrow</li>
                                         <li>Sale Order</li>
                                         <li>Invoice</li>
                                         <li>Receipt</li>                                   
@@ -681,7 +681,7 @@
                                             </div>
                                         </div>
                                         @*Borrow*@
-                                        <div>
+                                        <div class="hidecolumn">
                                             <div class="barattach-2">
                                                 <a onclick="CreateJobOrderBorrow()" class="alink" style="cursor:hand;"><img  src="@Url.Content("~/Images/btnadd.png")" class="btnimage-4" /></a>
                                                 <input type="hidden" id="hidIsNewBorrow" />
