--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -2,9 +2,9 @@
     ViewBag.Title = "EditJobOrder";
 }
 
-<h2>
+@*<h2>
     JobOrder Edit
-</h2>
+</h2>*@
 @* =============== timepicker *@
 @*<link href="@Url.Content("~/Content/timepicker/wickedpicker.css")" rel="stylesheet" type="text/css" />*@
 @*<script src="@Url.Content("~/Scripts/timepicker/wickedpicker.js")" type="text/javascript"></script>*@
@@ -155,7 +155,7 @@
                             <ul class="resp-tabs-list hor_1">
                                 <li>Income / Expense</li>
                                 <li>ManPower</li>
-                                <li>Requisition</li>
+                                <li class="hidecolumn">Requisition</li>
                                 <li>Sale Order</li>
                                 <li>Invoice</li>
                                 <li>Receipt</li>                            
@@ -680,7 +680,7 @@
                                     </div>
                                 </div>
                                 @*Borrow*@
-                                <div>
+                                <div class="hidecolumn">
                                     <div class="barattach-2">
                                         <a href="@Url.Action("CreateBorrow", "Borrow")?@Request.Params["id"]" class="alink"><img src="@Url.Content("~/Images/btnadd.png")" class="btnimage-4" /></a>
                                     </div>
