--- a/Alpha/AlphaMvc/Views/JobOrder/IndexJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/IndexJobOrder.cshtml
@@ -2,30 +2,31 @@
     ViewBag.Title = "IndexJobOrder";
 }
 
-<h2>JobOrder</h2>
+@*<h2>JobOrder</h2>*@
 <script src="@Url.Content("~/Scripts/CUDS/JobOrder/IndexJobOrder.js")" type="text/javascript"></script>
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 @* ------------------------------- grid  -------------------------------*@
 <table class="barattach-2">
     <tr>
         <td>
+            <label class="topictable">Job Order</label>
             <div class="topicattach-2">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
-            <a href="/JobOrder/CreateJobOrder"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd" /></a>
+            @*<a href="/JobOrder/CreateJobOrder"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd" /></a>*@
         </td>
     </tr>
 </table>
 <div class="table-responsive">
-    <table class="table table-striped">
+    <table id="tblJobOrder" class="table table-striped">
         <thead class="bgthead">
             <tr>
-                <th class="Rowpointer">No.</th>
-                <th class="Rowpointer">Job No.</th>
-                <th class="Rowpointer">วันที่</th>
-                <th class="Rowpointer">ลูกค้า</th>
-                <th class="Rowpointer">เบอร์โทร</th>
-                <th class="hideANDseek Rowpointer">บุคคลติดต่อ</th>
-                <th class="hideANDseek Rowpointer">ผู้ประสานงาน</th>
-                <th class="hideANDseek Rowpointer">หมายเหตุ</th>
+                <th>No.</th>
+                <th>Job No.</th>
+                <th>วันที่</th>
+                <th>ลูกค้า</th>
+                <th>เบอร์โทร</th>
+                <th class="hideANDseek">บุคคลติดต่อ</th>
+                <th class="hideANDseek">ผู้ประสานงาน</th>
+                <th class="hideANDseek">หมายเหตุ</th>
                 <th></th>
             </tr>
         </thead>
