--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -44,10 +44,10 @@
                     <label class="label-2" style="margin-right: 45%;">รุ่น</label>&nbsp;<label class="label-2">อายุใช้งาน</label>
                 </li>
                 <li>
-                    <input type="text" id="txtModel" name="field2" class="field-divided" placeholder="" />&nbsp;<input type="text" id="txtLifetime" name="field2" class="field-select-small"  />&nbsp;<label class="label-3">ปี</label>
+                    <input type="text" id="txtModel" name="field2" class="field-divided" placeholder="" />&nbsp;<input type="text" id="txtLifetime" name="field2" class="field-select-small" style="width:10%;"  />&nbsp;<label class="label-3">ปี</label>
                 </li>
                 <li>
-                    <label class="label-big">รับเข้า&nbsp;<label class="label-small">หน่วยนับ</label>
+                    <label class="label-big">รับเข้า&nbsp;</label><label class="label-small">หน่วยนับ</label>
                 </li>
                 <li>
                     <input type="text" id="dtReceiveDate" class="field-divided"  required/>&nbsp;<select id="cmbUnitWeight" name="cmbUnitWeight" class="field-select-small-2"></select>
@@ -56,13 +56,13 @@
                     <label class="label-small">ยกมา<span class="required">*</span></label>&nbsp;<label class="label-small-3">คงเหลือ<span class="required">*</span></label>
                 </li>
                 <li>
-                    <input type="text" id="txtBalance" name="field1" class="field-select-small"  required/>&nbsp;<input type="text" id="txtRemain" name="field2" class="field-select-small"  required disabled />
+                    <input type="text" id="txtBalance" name="field1" class="field-select-small" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 46" style="text-align:right;"  required/>&nbsp;<input type="text" id="txtRemain" name="field2" class="field-select-small" style="text-align:right;"  required disabled />
                 </li>
                 <li>
                     <label class="label-small-2">หาย</label>&nbsp;<label class="label-small-2">ซ่อม</label>&nbsp;<label class="label-small-2">ชำรุด</label>
                 </li>
                 <li>
-                    <input type="text" id="txtLost" name="field6" class="field-select-small"  disabled />&nbsp;<input type="text" id="txtRepair" name="field7" class="field-select-small"  disabled />&nbsp;<input type="text" id="txtBreak" name="field8" class="field-select-small"  disabled />
+                    <input type="text" id="txtLost" name="field6" class="field-select-small" style="text-align:right;"  disabled />&nbsp;<input type="text" id="txtRepair" name="field7" class="field-select-small" style="text-align:right;" disabled />&nbsp;<input type="text" id="txtBreak" name="field8" style="text-align:right;" class="field-select-small"  disabled />
                 </li>
             </ul>
             <ul class="form-style-1">
