--- a/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
+++ b/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
@@ -2,13 +2,9 @@
     ViewBag.Title = "EditRequisition";
 }
 
-@{
-    ViewBag.Title = "EditJobOrder";
-}
-
-<h2>
+@*<h2>
     JobOrder Edit
-</h2>
+</h2>*@
 @* =============== timepicker *@
 @*<link href="@Url.Content("~/Content/timepicker/wickedpicker.css")" rel="stylesheet" type="text/css" />*@
 @*<script src="@Url.Content("~/Scripts/timepicker/wickedpicker.js")" type="text/javascript"></script>*@
@@ -16,8 +12,8 @@
 <script src="@Url.Content("~/Scripts/timepicker/jquery.timepicker.js")" type="text/javascript"></script>
 @* =============== Pager *@
 <script src="@Url.Content("~/Scripts/EditableGrid/Pager.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/CUDS/JobOrderBorrow/IndexJobOrderBorrow.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/CUDS/JobOrder/EditJobOrder.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/CUDS/RequisitionAndReturn/IndexJobOrderBorrow.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/CUDS/RequisitionAndReturn/EditJobOrder.js")" type="text/javascript"></script>
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 
 <!-- Modal -->
@@ -56,7 +52,7 @@
 {
     //===================================================================CSS w3school
     <form>
-        <ul class="form-style-1">
+        <ul class="form-style-1 hidecolumn">
             <li>
                 <label>เลขที่ใบสั่งงาน</label>
                 <input type="text" id="txtJobNo" name="field1" class="field-divided" placeholder="เลขที่ใบสั่งงาน" disabled />
@@ -93,7 +89,7 @@
             </li>
 
         </ul>
-        <ul class="form-style-1">
+        <ul class="form-style-1 hidecolumn">
 
             <li>
                 <label>ลูกค้า</label>
@@ -136,7 +132,7 @@
                 <input type="hidden" id="hidJobID" />
             </li>
         </ul>
-        <ul class="form-style-1">
+        <ul class="form-style-1 hidecolumn">
             <li>
                 <label class="label-7">Job Site</label>&nbsp;<label class="label-8">Job Location</label>
             </li>
@@ -150,7 +146,7 @@
         </ul>
         @*//===================================================================CSS w3school*@
 
-        <table class="tabbar">
+        <table class="tabbar hidecolumn">
 
             <tr>
                 <td>
@@ -982,11 +978,47 @@
                 </td>
             </tr>
         </table>
-
-        <ul class="form-style-1">
+        <div>
+            <div class="barattach-2">
+                <a href="@Url.Action("CreateBorrow", "Borrow")?@Request.Params["id"]" class="alink"><img src="@Url.Content("~/Images/btnadd.png")" class="btnimage-4" /></a>
+            </div>
+            <div class="grigbar">
+                <table id="tblJobborrow" class="table table-striped scrolling" onended="SetPaging()">
+                    <thead class="bgthead">
+                        <tr>
+                            <th rowspan="2">ลำดับ</th>
+                            <th rowspan="2">Serial</th>
+                            <th rowspan="2">รายละเอียด</th>
+                            <th rowspan="2" class="hideANDseek">ยี่ห้อ</th>
+                            <th rowspan="2" class="hideANDseek">รุ่น</th>
+                            <th rowspan="2">ขนาด</th>
+                            <th rowspan="2">จำนวนที่เบิก</th>
+                            <th colspan="4" class="hideANDseek">คืน</th>
+                            <th rowspan="2"></th>
+                        </tr>
+                        <tr>
+                            <th class="hideANDseek">ดี</th>
+                            <th class="hideANDseek">หาย</th>
+                            <th class="hideANDseek">ซ่อม</th>
+                            <th class="hideANDseek">ชำรุด</th>
+                        </tr>
+                    </thead>
+                    <tbody id="result"></tbody>
+                </table>
+            </div>
+        </div>
+        <ul class="form-style-1 hidecolumn">
             <li>
                 <button type="button" id="btnSave" class="btn btn-primary" onclick="Isvalidate('Update', 'JobOrder', @Request.Params["id"])">Save</button>
                 <a onclick="OpenRptJobOrder(@Request.Params["id"])" class="alink" target="_blank"><img style="cursor:hand" src="@Url.Content("~/Images/printer.png")" class="btnprint" /></a>
+                @*<button type="button" id="btnSave" class="btnCreate" onclick="OpenRptJobOrder(@Request.Params["id"])" formtarget="_blank"><img src="@Url.Content("~/Images/addpicture.png")" class="btnimage-2" id="BDCCreate" /></button>*@
+            </li>
+        </ul>
+
+        <ul class="form-style-1">
+            <li>
+                <button type="button" id="btnSave" class="btn btn-primary" onclick="Isvalidate('Update', 'JobOrder', @Request.Params["id"])">Approve</button>
+                @*<a onclick="OpenRptJobOrder(@Request.Params["id"])" class="alink" target="_blank"><img style="cursor:hand" src="@Url.Content("~/Images/printer.png")" class="btnprint" /></a>*@
                 @*<button type="button" id="btnSave" class="btnCreate" onclick="OpenRptJobOrder(@Request.Params["id"])" formtarget="_blank"><img src="@Url.Content("~/Images/addpicture.png")" class="btnimage-2" id="BDCCreate" /></button>*@
             </li>
         </ul>
