--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -191,7 +191,7 @@
                                     <ul class="resp-tabs-list hor_1">
                                         <li>Income / Expense</li>
                                         <li>ManPower</li>
-                                        <li class="hidecolumn">Borrow</li>
+                                        @*<li class="hidecolumn">Borrow</li>*@
                                         <li>Sale Order</li>
                                         <li>Invoice</li>
                                         <li>Receipt</li>                                   
@@ -681,7 +681,7 @@
                                             </div>
                                         </div>
                                         @*Borrow*@
-                                        <div class="hidecolumn">
+                                        @*<div class="hidecolumn">
                                             <div class="barattach-2">
                                                 <a onclick="CreateJobOrderBorrow()" class="alink" style="cursor:hand;"><img  src="@Url.Content("~/Images/btnadd.png")" class="btnimage-4" /></a>
                                                 <input type="hidden" id="hidIsNewBorrow" />
@@ -711,7 +711,7 @@
                                                     <tbody id="result"></tbody>
                                                 </table>
                                             </div>
-                                        </div>
+                                        </div>*@
                                         <div>
                                             @* SaleOrder *@
                                             <div class="wrapper">
