--- a/Alpha/AlphaMvc/Views/AllActivity/AllActivity.cshtml
+++ b/Alpha/AlphaMvc/Views/AllActivity/AllActivity.cshtml
@@ -2,7 +2,6 @@
     ViewBag.Title = "AllActivity";
 }
 
-<h2>AllActivity</h2>
 <script src="@Url.Content("~/Scripts/CUDS/AllActivity/IndexAllActivity.js")" type="text/javascript"></script>
 
 <link href="@Url.Content("~/Content/calendar/fullcalendarCustom.css")" rel="stylesheet" type="text/css" />
@@ -182,29 +181,35 @@ $(document).ready(function () {
         font-size: 14px;
     }
 </style>
+<h2 class="bigtopic">Job Order</h2><h2>Man Power</h2>
 <div id="calendar"></div>
 <div id="calendarManPower"></div>
 <section class="features">
-    <table id="tblRequisition" class="table table-striped scrolling" onended="SetPaging()">
-        <thead class="bgthead">
-            <tr>
-                <th rowspan="2">ลำดับ</th>
-                <th rowspan="2">Serial</th>
-                <th rowspan="2">รายละเอียด</th>
-                <th rowspan="2" class="hideANDseek">ยี่ห้อ</th>
-                <th rowspan="2" class="hideANDseek">รุ่น</th>
-                <th rowspan="2">ขนาด</th>
-                <th rowspan="2">จำนวนที่เบิก</th>
-                <th colspan="4" class="hideANDseek">คืน</th>
-                <th rowspan="2"></th>
-            </tr>
-            <tr>
-                <th class="hideANDseek">ดี</th>
-                <th class="hideANDseek">หาย</th>
-                <th class="hideANDseek">ซ่อม</th>
-                <th class="hideANDseek">ชำรุด</th>
-            </tr>
-        </thead>
-            <tbody id="result"></tbody>
-    </table>
+        <div class="table-responsive">
+            <table class="barattach-2">
+                <tr>
+                    <td>
+                        <label class="topicmargin-size67">Requisition & Return</label>
+                        <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
+                    </td>
+                </tr>
+            </table>
+            <table id="tblRequisition" class="table table-striped scrolling" onended="SetPaging()">
+                <thead class="bgthead">
+                    <tr>
+                        <th class="Rowpointer">No.</th>
+                        <th class="Rowpointer">Job No.</th>
+                        <th class="Rowpointer">วันที่</th>
+                        <th class="Rowpointer">ลูกค้า</th>
+                        <th class="Rowpointer">สถานะ</th>
+                        <th class="hidecolumn Rowpointer">เบอร์โทร</th>
+                        <th class="hidecolumn Rowpointer">บุคคลติดต่อ</th>
+                        <th class="hidecolumn Rowpointer">ผู้ประสานงาน</th>
+                        <th class="hidecolumn Rowpointer">หมายเหตุ</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody id="result"></tbody>
+            </table>
+        </div>
 </section>
